Project finished with responsive

--- a/html/aboutMe.html
+++ b/html/aboutMe.html
@@ -7,7 +7,6 @@
 </head>
 
 <body>
-    <main>
         <header>
             <div class="navigation_bar">
 
@@ -20,11 +19,13 @@
             </div>
         </header>
 
-        <img class="Image" src="/Img/image_Valen.png" alt="Image about me" width="300px" height="300px">
+        <h1>About Me</h1>
 
         <div class="aboutMe">
-            <h1>About Me</h1>
+            <div class="content">
 
+            
+            <img class="Image" src="/Img/image_Valen.png" alt="Image about me" width="300px" height="300px">
             <p>I am 18 years old. I am a very shy person, many confuse that with being "believed" however it is a word
                 that does not really define me, I like to study. My biggest weakness in study topics is that I never ask
                 because of nerves and it is something that should change, however I try to understand so as not to have
@@ -38,8 +39,10 @@
                 have the tools and skills well worked out, I have good techniques in whatever I do and it is within my
                 reach.</p>
         </div>
+        </div>
 
         <div class="socialMedia">
+            <div class="content">
 
             <a target="_blank" href="https://github.com/"><img src="/Img/GitHubpngwing.com.png" alt="Git Hub profile"
                     width="150px" height="120px"></a>
@@ -47,14 +50,15 @@
             <a target="_blank" href="https://www.linkedin.com/in/valen-ram%C3%ADrez-a7b517204/"><img
                     src="/Img/Linpngwing.com.png" alt="LinkedIn profile" width="150px" height="120px"></a>
 
+                </div>
+                
+                <p id="Gmail">To know more contact me <a target="_blank" href="mailto:ramirezvalentina783@gmail.com">Ramirezvalentina783@gmail.com</a></p>
         </div>
 
-        <p id="Gmail">To know more contact me <a target="_blank" href="mailto:ramirezvalentina783@gmail.com">Ramirezvalentina783@gmail.com</a></p>
 
         <footer>
             <p>VALENTINA RAMIREZ SARMIENTO &copy; February 28, 2023</p>
         </footer>
-    </main>
 </body>
 
 </html>
