--- a/html/history.html
+++ b/html/history.html
@@ -7,20 +7,17 @@
 </head>
 
 <body>
-    <main>
-        <header>
-            <div class="navigation_bar">
+    <header>
+        <div class="navigation_bar">
+            <img src="/Img/Netflix.png" alt="" width="200" height="50">
+            <a href="/index.html">INICIO</a>
+            <a href="/html/history.html">HISTORY</a>
+            <a href="/html/contact.html">CONTACT</a>
+            <a href="/html/aboutMe.html">MY PROFILE</a>
+    </header>
 
-                <img src="/Img/Netflix.png" alt="" width="200" height="50">
-                <a href="/index.html">INICIO</a>
-                <a href="/html/history.html">HISTORY</a>
-                <a href="/html/contact.html">CONTACT</a>
-                <a href="/html/aboutMe.html">MY PROFILE</a>
-
-            </div>
-        </header>
-
-        <div class="section1">
+    <div class="section1">
+        <div class="content">
             <h1>Our History</h1>
 
             <p> Netflix, Inc. is an American streaming platform and entertainment company. Located in Los Gatos
@@ -45,11 +42,16 @@
                 In 2011, the company began operations for the first time outside the United States and Canada, offering
                 its catalog by streaming in the Latin American and Caribbean region. In 2012 it offers its services in
                 some European countries, and as of 2016 it offers its contents to the whole world with the exception of
-                the Crimea region, and the territories of North Korea, Mainland China, Iran, Iraq and Syria. </p>
-
+                the Crimea region, and the territories of North Korea, Mainland China, Iran, Iraq and Syria.
+            </p>
+            <img class="img"
+                src="https://assets3.thrillist.com/v1/image/1884317/792x487/flatten;scale;jpeg_quality=60.jpg"
+                alt="Netflix in 2007" width="600px" height="400px">
         </div>
+    </div>
 
-        <div class="txtright">
+    <div class="txtright">
+        <div class="content">
             <p>On January 16, 2014, the nomination of the documentary The Square for an Academy Award became the first
                 in history for an original Netflix production.10 11 The most successful Spanish-language products
                 worldwide are the La paper house and Elite, both located in the world top 10 of the most watched series
@@ -61,19 +63,14 @@
                 loss of 200,000 customers and projects 2 million fewer for the second quarter of the year. <br><br>
                 In 2022, Netflix executives reported that the platform would have ads through the "Basic Plan with Ads"
                 from November 1st. Netflix with more than 20,000,000 global subscribers</p>
+                <video src="/Video/NetflixHistory.mp4" controls width="600" height="500"></video>
+                <h2>If you want to know more click <a target="_blank" href="https://es.wikipedia.org/wiki/Netflix">here.</a></h2>
         </div>
+    </div>
 
-        <img class="img" src="https://assets3.thrillist.com/v1/image/1884317/792x487/flatten;scale;jpeg_quality=60.jpg"
-            alt="Netflix in 2007" width="600px" height="400px">
-
-        <video src="/Video/NetflixHistory.mp4" controls></video>
-
-        <h2>If you want to know more click <a target="_blank" href="https://es.wikipedia.org/wiki/Netflix">here.</a></h2>
-        
-        <footer>
-            <p>VALENTINA RAMIREZ SARMIENTO &copy; February 28, 2023</p>
-        </footer>
-    </main>
+    <footer>
+        <p>VALENTINA RAMIREZ SARMIENTO &copy; February 28, 2023</p>
+    </footer>
 </body>
 
 </html>
